--- a/book/references.bib
+++ b/book/references.bib
@@ -397,3 +397,23 @@
   journal = {arXiv preprint arXiv:2102.02503},
   year    = {2021}
 }
+
+# Research Applications in Economics
+
+@article{hassan2019firm,
+  title     = {Firm-level political risk: Measurement and effects},
+  author    = {Hassan, Tarek A and Hollander, Stephan and Van Lent, Laurence and Tahoun, Ahmed},
+  journal   = {The Quarterly Journal of Economics},
+  volume    = {134},
+  number    = {4},
+  pages     = {2135--2202},
+  year      = {2019},
+  publisher = {Oxford University Press}
+}
+
+@techreport{hassan2021sources,
+  title       = {Sources and transmission of country risk},
+  author      = {Hassan, Tarek Alexander and Schreger, Jesse and Schwedeler, Markus and Tahoun, Ahmed},
+  year        = {2021},
+  institution = {National Bureau of Economic Research}
+}
