--- a/_sources/lectures/nlp_intro/research.ipynb
+++ b/_sources/lectures/nlp_intro/research.ipynb
@@ -16,6 +16,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9fc3afe2",
    "metadata": {
@@ -27,14 +28,20 @@
    "source": [
     "## Textual analysis\n",
     "\n",
-    "- Textual analysis becoming increasingly popular in asset pricing, macro, and other fields.\n",
-    "- Most successful applications use text to measure economic concepts that are otherwise hard or impossible to measure.\n",
-    "- So-far, simplest applications have been the most successful.\n",
-    "- Many cutting-edge methods of machine learning are not necessary or even counter-productive, similar to kitchen-sink regressions, prone to over-fitting.\n",
-    "- Advice:\n",
-    "  - keep it simple.\n",
-    "  - stay close to the text, read a lot.\n",
-    "  - frontier is more in learning from new data than in fancy techniques.\n"
+    "Textual analysis has gained significant popularity in recent years, especially in the field of asset pricing, macroeconomics, and other related fields. This approach involves analyzing large volumes of text to extract meaningful insights and information, which can be used to inform decision-making.\n",
+    "\n",
+    "One of the primary reasons for the growing popularity of textual analysis is that it enables researchers to measure economic concepts that are otherwise hard or impossible to measure. For example, sentiments, emotions, and attitudes can be extracted from social media posts, news articles, and other textual data to provide insights into consumer behavior, market trends, and other economic indicators.\n",
+    "\n",
+    "Interestingly, the simplest applications of textual analysis have proven to be the most successful so far. Many cutting-edge methods of machine learning, such as deep learning and neural networks, are not always necessary and can even be counter-productive, similar to kitchen-sink regressions that are prone to over-fitting.\n",
+    "\n",
+    "Therefore, the advice for researchers interested in textual analysis is to keep it simple and stay close to the text. This means reading a lot of relevant texts and using basic techniques to extract insights. The frontier of this field is more in learning from new data rather than using fancy techniques.\n",
+    "\n",
+    "- Textual analysis is increasingly popular in asset pricing, macroeconomics, and other fields.\n",
+    "- It enables researchers to measure economic concepts that are otherwise hard or impossible to measure.\n",
+    "- Simple applications of textual analysis have been the most successful so far.\n",
+    "- Many cutting-edge methods of machine learning are not necessary and can even be counter-productive.\n",
+    "- The advice is to keep it simple, stay close to the text, and read a lot.\n",
+    "- The frontier of the field is in learning from new data rather than using fancy techniques.\n"
    ]
   },
   {
@@ -51,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "55d9820b",
    "metadata": {
@@ -60,15 +68,17 @@
     "tags": []
    },
    "source": [
-    "## Firm-level political risk\n",
-    "by Hassan, Hollander, van Lent, and Tahoun (2019)\n",
+    "## Firm-Level Political Risk: Measurement and Effects {cite:p}`hassan2019firm`\n",
     "\n",
-    "- What share of the conversation between management and participants centers on political risks?\n",
-    "\n",
-    "- Extract all two-word combinations (“bigrams”) from training libraries indicative of discussion of political topics, P, and non-political topics\n"
+    "- The paper develops a measure of political risk for individual US firms based on the share of their earnings conference calls devoted to political risks.\n",
+    "- The measure is validated by correctly identifying calls with extensive conversations on political risks and correlating with the firm’s actions and stock market volatility.\n",
+    "- Firms exposed to political risk retrench hiring and investment and actively lobby and donate to politicians.\n",
+    "- The variation in the measure is mainly at the firm level, and the dispersion of firm-level political risk increases during high aggregate political risk times.\n",
+    "- Firms that spend more time discussing risks associated with a given political topic tend to increase lobbying on that topic in the following quarter."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5de36bdc",
    "metadata": {
@@ -80,14 +90,14 @@
    "source": [
     "**Conference Call Transcripts**\n",
     "\n",
-    "- Transcripts of 326,247 earnings conference calls of 11,943 firms headquartered in 84 different countries, available 2002-20 from EIKON.\n",
-    "\n",
-    "- Typically four calls per year, after earnings releases.\n",
-    "\n",
-    "- Management presentation followed by Q&A with firm’s analysts (0-70 questions, average duration 45 min).\n"
+    "- The dataset includes 326,247 earnings conference call transcripts from 11,943 firms headquartered in 84 different countries, spanning from 2002 to 2020.\n",
+    "- Conference calls occur typically four times a year after earnings releases.\n",
+    "- The calls consist of a management presentation followed by a Q&A session with the firm's analysts.\n",
+    "- On average, the Q&A session involves 0-70 questions and lasts approximately 45 minutes."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1fe1d766",
    "metadata": {
@@ -99,14 +109,15 @@
    "source": [
     "**Measure of Political Risk**\n",
     "\n",
-    "- Count the number of occurrences of (exclusively) political bigrams in conjunction with a synonym for risk or uncertainty and divide by the total number of bigrams in the transcript:\n",
-    "  \n",
-    "  \n",
-    "  $PRisk_{it} = \\frac{1}{B_{it}}\\sum_{b}^{B_{it}}\\{1[ b \\in \\mathbb{P}\\setminus\\mathbb{N}] \\times 1[|b-r| \\lt 10] \\times f_{b,\\mathbb{P}}/B_{\\mathbb{P}}\\}$\n",
+    "- The measure of political risk is computed by counting the number of occurrences of political bigrams in conjunction with a synonym for risk or uncertainty and dividing it by the total number of bigrams in the transcript.\n",
     "\n",
-    "  where $r$ is the position of the nearest synonym of risk or uncertainty and $b = 0,1,\\ldots B_{it}$ are the bigrams contained in call of firm $i$ at time $t$.\n",
+    "- The formula for the measure is given as:\n",
     "\n",
-    "  (Application of \"$tf \\times idf$\")"
+    "- $PRisk_{it} = \\frac{1}{B_{it}}\\sum_{b}^{B_{it}}{1[ b \\in \\mathbb{P}\\setminus\\mathbb{N}] \\times 1[|b-r| \\lt 10] \\times f_{b,\\mathbb{P}}/B_{\\mathbb{P}}}$\n",
+    "\n",
+    "- where $r$ is the position of the nearest synonym of risk or uncertainty, $b = 0,1,\\ldots B_{it}$ are the bigrams contained in the call of firm $i$ at time $t$, and $\\mathbb{P}$ denotes the set of political bigrams.\n",
+    "\n",
+    "- The formula applies the \"$tf \\times idf$\" method to calculate the weight of the bigrams in measuring political risk.\n"
    ]
   },
   {
@@ -125,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "177bb777",
    "metadata": {
@@ -136,20 +148,21 @@
    "source": [
     "**Measuring news about the mean: $PSentiment_{it}$**\n",
     "\n",
-    "- Use same approach to measure mean of political news:\n",
+    "- The measure of news about the mean is calculated using the same approach to measure the mean of political news.\n",
     "\n",
-    "  - Count positive and negative words (“sentiment”) used in conjunction with a political bigram:\n",
+    "- The sentiment of political news is measured by counting positive and negative words used in conjunction with a political bigram.\n",
     "\n",
-    "    $PSentiment_{i,t} = \\frac{1}{B_{it}} \\sum_{b}^{B_{it}} \\Big( 1[ b \\in \\mathbb{P}\\setminus\\mathbb{N}] \\times \\frac{f_{b,\\mathbb{P}}}{B_{\\mathbb{P}}} \\times \\sum_{c=b-10}^{b+10} S(c) \\Big) $,\n",
+    "- The formula for measuring news about the mean is given as:\n",
     "\n",
-    "    where $S$ assigns sentiment to each $c$ (Laughran & McDonald 2011)\n",
+    "- $PSentiment_{i,t} = \\frac{1}{B_{it}} \\sum_{b}^{B_{it}} \\Big( 1[ b \\in \\mathbb{P}\\setminus\\mathbb{N}] \\times \\frac{f_{b,\\mathbb{P}}}{B_{\\mathbb{P}}} \\times \\sum_{c=b-10}^{b+10} S(c) \\Big)$,\n",
     "\n",
-    "    $S(c) = \\begin{cases} +1 \\text{ if } c \\in \\mathbb{S}^{+} \\\\ -1 \\text{ if } c \\in \\mathbb{S}^{-} \\\\ 0 \\text{  otherwise} \\end{cases}$\n",
+    "- where $\\mathbb{P}$ denotes the set of political bigrams, $S$ assigns sentiment to each word in the vicinity of the bigram, and $B_{it}$ represents the total number of bigrams in the transcript.\n",
     "\n",
-    "  - Find that $Corr(PRisk_{it}, PSentiment_{it}) = −0.095^{***}$\n"
+    "- The correlation between the measure of political risk and the measure of news about the mean is negative, with $Corr(PRisk_{it}, PSentiment_{it}) = −0.095^{***}$."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5d07c13a",
    "metadata": {
@@ -159,14 +172,15 @@
     "tags": []
    },
    "source": [
+    "**$PRisk_{it}$**\n",
     "\n",
-    "**$PRisk_{it}$ identifies conversations about risks associated with political topics.**\n",
-    "\n",
-    "- Bigrams with highest scores intuitively linked to politics (‘the constitution,’ ‘public opinion,’ ‘interest groups,’ ‘the FAA’ ...)\n",
-    "  Transcripts with highest PRisk it indeed center around discussions about ballot initiatives, legislation, regulation, government expenditure,...\n"
+    "- $PRisk_{it}$ is a measure that identifies conversations related to risks associated with political topics. \n",
+    "- The bigrams with the highest scores are intuitively linked to politics, such as \"the constitution,\" \"public opinion,\" \"interest groups,\" and \"the FAA.\" \n",
+    "- The transcripts with the highest $PRisk_{it}$ values are typically centered around discussions about ballot initiatives, legislation, regulation, government expenditure, and other politically relevant topics."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "25765fb8",
    "metadata": {
@@ -176,7 +190,7 @@
     "tags": []
    },
    "source": [
-    "**Transcripts with highest PRisk**\n",
+    "**Transcripts with the highest $PRisk_{it}$**\n",
     "\n",
     "![h:500px](../figs/intro_nlp/research/4.png)"
    ]
@@ -200,6 +214,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a49c876e",
    "metadata": {
@@ -209,18 +224,22 @@
     "tags": []
    },
    "source": [
-    "## Sources and Transmission of Country Risk\n",
-    "by Hassan, Schreger, Schwedeler, and Tahoun (2021)\n",
+    "## Sources and Transmission of Country Risk {cite:p}`hassan2021sources`\n",
+    "\n",
+    "- The paper uses textual analysis of earnings conference calls held by listed firms globally to measure country risk.\n",
+    "- The firm-country-quarter-level data is used to identify spikes in perceived country risk, known as \"crises,\" and their pattern of transmission to foreign firms.\n",
+    "- The pattern of transmission during crises usually follows a gravity structure, but it changes significantly during crises.\n",
+    "- Elevated perceptions of a country's riskiness by foreign and financial firms lead to significant falls in local asset prices, capital outflows, and reductions in firm-level investment and employment.\n",
+    "- Risk transmitted from foreign countries also affects the investment decisions of domestic firms.\n",
+    "- The cross-country pattern of interest rates and currency risk premia can be explained by the heterogeneous currency loadings on perceived global risk.\n",
+    "\n",
+    "### Data and Methodology\n",
     "\n",
     "For each of 56 countries assemble a training library, $\\mathbb{T}^{C}$\n",
     "\n",
-    "- All \"Country Commerce\" reports published by the Economist Intelligence Unit 2002-2016\n",
-    "- All names of the country, names of towns with more than 15,000 inhabitants in 2018, and administrative subdivisions from geonames.org and CIA World Factbook.\n",
-    "\n",
-    "Use $tf \\times idf$ to identify two-word combinations ('bigrams') that are indicative of discussion of each country. For example, a mention of \"Angela Merkel\" is indicative of discussions of country $C$ if,\n",
-    "\n",
-    "- The bigram if frequent in $C$'s training library\n",
-    "- It is rarely used in other countries' libraries"
+    "- The training library consists of all \"Country Commerce\" reports published by the Economist Intelligence Unit from 2002 to 2016 and all names of the country, names of towns with more than 15,000 inhabitants in 2018, and administrative subdivisions from geonames.org and CIA World Factbook.\n",
+    "- $tf \\times idf$ is used to identify bigrams that are indicative of discussions of each country.\n",
+    "- A bigram is considered indicative of discussions of country $C$ if it is frequent in $C$'s training library and rarely used in other countries' libraries.\n"
    ]
   },
   {
