--- a/book/references.bib
+++ b/book/references.bib
@@ -417,3 +417,14 @@
   year        = {2021},
   institution = {National Bureau of Economic Research}
 }
+
+@article{hoberg2016text,
+  title={Text-based network industries and endogenous product differentiation},
+  author={Hoberg, Gerard and Phillips, Gordon},
+  journal={Journal of Political Economy},
+  volume={124},
+  number={5},
+  pages={1423--1465},
+  year={2016},
+  publisher={University of Chicago Press Chicago, IL}
+}
