--- a/_sources/lectures/nlp_intro/research.ipynb
+++ b/_sources/lectures/nlp_intro/research.ipynb
@@ -121,6 +121,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0f11b193",
    "metadata": {
@@ -130,9 +131,13 @@
     "tags": []
    },
    "source": [
-    "- Synonyms for “risk” or “uncertainty”\n",
-    "\n",
-    "![h:500px](../figs/intro_nlp/research/2.png)"
+    "```{figure} ../figs/intro_nlp/research/2.png\n",
+    "---\n",
+    "height: 500px\n",
+    "name: fig-synonyms\n",
+    "---\n",
+    "Synonyms for “risk” or “uncertainty”\n",
+    "```\n"
    ]
   },
   {
@@ -190,12 +195,18 @@
     "tags": []
    },
    "source": [
-    "**Transcripts with the highest $PRisk_{it}$**\n",
-    "\n",
-    "![h:500px](../figs/intro_nlp/research/4.png)"
+    "```{figure} ../figs/intro_nlp/research/4.png\n",
+    "---\n",
+    "height: 500px\n",
+    "name: fig-highest-prisk\n",
+    "---\n",
+    "Transcripts with the highest $PRisk_{it}$\n",
+    "```\n",
+    "\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f02f14a2",
    "metadata": {
@@ -208,9 +219,14 @@
     "\n",
     "**Example: Duke Energy Corporation**\n",
     "\n",
+    "```{figure} ../figs/intro_nlp/research/5.png\n",
+    "---\n",
+    "width: 500px\n",
+    "name: fig-duke-energy\n",
+    "---\n",
     "A coal company’s $PRisk_{it}$\n",
-    "\n",
-    "![h:500px](../figs/intro_nlp/research/5.png)"
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -290,6 +306,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "62b1fc59",
    "metadata": {
@@ -299,22 +316,32 @@
     "tags": []
    },
    "source": [
-    "**Financial and Non-Financial Risk: Greece**\n",
-    "\n",
-    "![h:500px](../figs/intro_nlp/research/7.png)"
+    "```{figure} ../figs/intro_nlp/research/7.png\n",
+    "---\n",
+    "height: 500px\n",
+    "name: fig-country-risk-greece\n",
+    "---\n",
+    "Financial and non-financial risk: Greece\n",
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bedff10a",
    "metadata": {},
    "source": [
-    "**Financial and Non-Financial Risk: Thailand**\n",
-    "\n",
-    "![h:500px](../figs/intro_nlp/research/8.png)"
+    "```{figure} ../figs/intro_nlp/research/8.png\n",
+    "---\n",
+    "height: 500px\n",
+    "name: fig-country-risk-thailand\n",
+    "---\n",
+    "Financial and non-financial risk: Thailand\n",
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9129241e",
    "metadata": {
@@ -324,12 +351,17 @@
     "tags": []
    },
    "source": [
-    "**Financial and Non-Financial Risk: Global**\n",
-    "\n",
-    "![h:500px](../figs/intro_nlp/research/9.png)"
+    "```{figure} ../figs/intro_nlp/research/9.png\n",
+    "---\n",
+    "height: 500px\n",
+    "name: fig-country-risk-global\n",
+    "---\n",
+    "Financial and non-financial risk: Global\n",
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0473d14b",
    "metadata": {
@@ -339,22 +371,19 @@
     "tags": []
    },
    "source": [
-    "## Hoberg and Philips (2016)\n",
+    "## Text-Based Network Industries and Endogenous Product Differentiation {cite:p}`hoberg2016text`\n",
     "\n",
-    "- Use similarity between product descriptions in 10Ks to identify industry clusters.\n",
-    "\n",
-    "- How similar are two firms’ products?\n",
-    "\n",
-    "- The most popular way of calculating similarity is cosine similarity.\n",
-    "  \n",
-    "  $ S_{i,j} = c_i \\cdot c_j $\n",
-    "  \n",
-    "  where $c_i$ is the normalized representative vector of words for document $i$.\n",
-    "\n",
-    "- A creative way of figuring out who is competing with whom!\n"
+    "- The paper studies how firms differ from their competitors using time-varying measures of product similarity based on text-based analysis of firm 10-K product descriptions.\n",
+    "- The time-varying set of product similarity measures enables the generation of new industries in which firms can have their own distinct set of competitors.\n",
+    "- The new sets of competitors explain specific discussion of high competition, rivals identified by managers as peer firms, and changes to industry competitors following exogenous industry shocks.\n",
+    "- The study finds evidence that firm R&D and advertising are associated with subsequent differentiation from competitors, consistent with theories of endogenous product differentiation.\n",
+    "- Cosine similarity is the most popular way of calculating similarity.\n",
+    "- The formula for cosine similarity is $ S_{i,j} = c_i \\cdot c_j $, where $c_i$ is the normalized representative vector of words for document $i$.\n",
+    "- This approach provides a creative way of figuring out who is competing with whom, using text-based analysis of firm 10-K product descriptions to measure product similarity and identify distinct sets of competitors."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8f77c172",
    "metadata": {
@@ -366,17 +395,14 @@
    "source": [
     "**Product Descriptions to Vector**\n",
     "\n",
-    "- Only keep nouns (webster.com) and proper nouns. Drop most commonly used nouns.\n",
-    "\n",
-    "- Vector ($c_i$) is binary values for included words.\n",
-    "\n",
-    "- Cosine similarity between all firm-year pairs results in a huge matrix with firm-year as rows and columns.\n",
-    "\n",
-    "- Cluster firm-pairs year by year to form yearly industry clusters.\n",
-    "\n"
+    "- Product descriptions are converted to vectors by only keeping nouns (according to webster.com) and proper nouns, while dropping the most commonly used nouns.\n",
+    "- The resulting vector ($c_i$) consists of binary values for included words.\n",
+    "- The cosine similarity between all firm-year pairs results in a large matrix with firm-year as rows and columns.\n",
+    "- The firm-year pairs are clustered year by year to form yearly industry clusters."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "907548b8",
    "metadata": {
@@ -386,15 +412,20 @@
     "tags": []
    },
    "source": [
-    "**Result**\n",
+    "**Results**\n",
     "\n",
-    "Sample industry that changed a lot\n",
+    "- The study uses text-based analysis of firm 10-K product descriptions to track changes in industries and identify competitors.\n",
+    "- This approach can be used to form industry definitions and track who is competing with whom.\n",
+    "- One drawback of using 10-K's is that they are only available for US firms, limiting the generalizability of the findings.\n",
     "\n",
-    "- Use this to track who is competing with whom, form industry definitions.\n",
     "\n",
-    "- One drawback of 10K’s: only available for US firms.\n",
-    "\n",
-    "![h:500px](../figs/intro_nlp/research/10.png)"
+    "```{figure} ../figs/intro_nlp/research/10.png\n",
+    "---\n",
+    "width: 600px\n",
+    "name: fig-product-similarity\n",
+    "---\n",
+    "Industry clusters based on product similarity\n",
+    "```\n"
    ]
   },
   {
