docs: update research applicaions citings

--- a/book/lectures/nlp_intro/research.ipynb
+++ b/book/lectures/nlp_intro/research.ipynb
@@ -45,19 +45,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "af5e881d",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "![textual](../figs/aiart/entelecheia_textual_analysis.png)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "55d9820b",
@@ -68,7 +55,8 @@
     "tags": []
    },
    "source": [
-    "## Firm-Level Political Risk: Measurement and Effects {cite:p}`hassan2019firm`\n",
+    "## Firm-Level Political Risk: Measurement and Effects \n",
+    "{cite:t}`hassan2019firm`\n",
     "\n",
     "- The paper develops a measure of political risk for individual US firms based on the share of their earnings conference calls devoted to political risks.\n",
     "- The measure is validated by correctly identifying calls with extensive conversations on political risks and correlating with the firm’s actions and stock market volatility.\n",
@@ -240,7 +228,8 @@
     "tags": []
    },
    "source": [
-    "## Sources and Transmission of Country Risk {cite:p}`hassan2021sources`\n",
+    "## Sources and Transmission of Country Risk \n",
+    "{cite:t}`hassan2021sources`\n",
     "\n",
     "- The paper uses textual analysis of earnings conference calls held by listed firms globally to measure country risk.\n",
     "- The firm-country-quarter-level data is used to identify spikes in perceived country risk, known as \"crises,\" and their pattern of transmission to foreign firms.\n",
@@ -371,7 +360,8 @@
     "tags": []
    },
    "source": [
-    "## Text-Based Network Industries and Endogenous Product Differentiation {cite:p}`hoberg2016text`\n",
+    "## Text-Based Network Industries and Endogenous Product Differentiation \n",
+    "{cite:t}`hoberg2016text`\n",
     "\n",
     "- The paper studies how firms differ from their competitors using time-varying measures of product similarity based on text-based analysis of firm 10-K product descriptions.\n",
     "- The time-varying set of product similarity measures enables the generation of new industries in which firms can have their own distinct set of competitors.\n",
