chore: covnert research notebook to markdown file

--- a/book/references.bib
+++ b/book/references.bib
@@ -428,3 +428,14 @@
   year={2016},
   publisher={University of Chicago Press Chicago, IL}
 }
+
+@article{baker2016measuring,
+  title={Measuring economic policy uncertainty},
+  author={Baker, Scott R and Bloom, Nicholas and Davis, Steven J},
+  journal={The quarterly journal of economics},
+  volume={131},
+  number={4},
+  pages={1593--1636},
+  year={2016},
+  publisher={Oxford University Press}
+}
