docs: update bloom2021diffusion

--- a/book/references.bib
+++ b/book/references.bib
@@ -439,3 +439,10 @@
   year={2016},
   publisher={Oxford University Press}
 }
+
+@techreport{bloom2021diffusion,
+  title={The diffusion of disruptive technologies},
+  author={Bloom, Nicholas and Hassan, Tarek Alexander and Kalyani, Aakash and Lerner, Josh and Tahoun, Ahmed},
+  year={2021},
+  institution={National Bureau of Economic Research}
+}
