--- a/book/references.bib
+++ b/book/references.bib
@@ -446,3 +446,14 @@
   year={2021},
   institution={National Bureau of Economic Research}
 }
+
+@article{netzer2019words,
+  title={When words sweat: Identifying signals for loan default in the text of loan applications},
+  author={Netzer, Oded and Lemaire, Alain and Herzenstein, Michal},
+  journal={Journal of Marketing Research},
+  volume={56},
+  number={6},
+  pages={960--980},
+  year={2019},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
