docs: finish updading research applicaions

--- a/book/references.bib
+++ b/book/references.bib
@@ -419,41 +419,90 @@
 }
 
 @article{hoberg2016text,
-  title={Text-based network industries and endogenous product differentiation},
-  author={Hoberg, Gerard and Phillips, Gordon},
-  journal={Journal of Political Economy},
-  volume={124},
-  number={5},
-  pages={1423--1465},
-  year={2016},
-  publisher={University of Chicago Press Chicago, IL}
+  title     = {Text-based network industries and endogenous product differentiation},
+  author    = {Hoberg, Gerard and Phillips, Gordon},
+  journal   = {Journal of Political Economy},
+  volume    = {124},
+  number    = {5},
+  pages     = {1423--1465},
+  year      = {2016},
+  publisher = {University of Chicago Press Chicago, IL}
 }
 
 @article{baker2016measuring,
-  title={Measuring economic policy uncertainty},
-  author={Baker, Scott R and Bloom, Nicholas and Davis, Steven J},
-  journal={The quarterly journal of economics},
-  volume={131},
-  number={4},
-  pages={1593--1636},
-  year={2016},
-  publisher={Oxford University Press}
+  title     = {Measuring economic policy uncertainty},
+  author    = {Baker, Scott R and Bloom, Nicholas and Davis, Steven J},
+  journal   = {The quarterly journal of economics},
+  volume    = {131},
+  number    = {4},
+  pages     = {1593--1636},
+  year      = {2016},
+  publisher = {Oxford University Press}
 }
 
 @techreport{bloom2021diffusion,
-  title={The diffusion of disruptive technologies},
-  author={Bloom, Nicholas and Hassan, Tarek Alexander and Kalyani, Aakash and Lerner, Josh and Tahoun, Ahmed},
-  year={2021},
-  institution={National Bureau of Economic Research}
+  title       = {The diffusion of disruptive technologies},
+  author      = {Bloom, Nicholas and Hassan, Tarek Alexander and Kalyani, Aakash and Lerner, Josh and Tahoun, Ahmed},
+  year        = {2021},
+  institution = {National Bureau of Economic Research}
 }
 
 @article{netzer2019words,
-  title={When words sweat: Identifying signals for loan default in the text of loan applications},
-  author={Netzer, Oded and Lemaire, Alain and Herzenstein, Michal},
-  journal={Journal of Marketing Research},
-  volume={56},
-  number={6},
-  pages={960--980},
+  title     = {When words sweat: Identifying signals for loan default in the text of loan applications},
+  author    = {Netzer, Oded and Lemaire, Alain and Herzenstein, Michal},
+  journal   = {Journal of Marketing Research},
+  volume    = {56},
+  number    = {6},
+  pages     = {960--980},
+  year      = {2019},
+  publisher = {SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@inproceedings{burgess2016legislative,
+  title     = {The legislative influence detector: Finding text reuse in state legislation},
+  author    = {Burgess, Matthew and Giraudy, Eugenia and Katz-Samuels, Julian and Walsh, Joe and Willis, Derek and Haynes, Lauren and Ghani, Rayid},
+  booktitle = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages     = {57--66},
+  year      = {2016}
+}
+
+@incollection{catalinac2018pork,
+  title     = {From pork to policy: The rise of programmatic campaigning in Japanese elections},
+  author    = {Catalinac, Amy},
+  booktitle = {Critical Readings on the Liberal Democratic Party in Japan},
+  pages     = {882--917},
+  year      = {2018},
+  publisher = {Brill}
+}
+
+@article{roberts2020adjusting,
+  title     = {Adjusting for confounding with text matching},
+  author    = {Roberts, Margaret E and Stewart, Brandon M and Nielsen, Richard A},
+  journal   = {American Journal of Political Science},
+  volume    = {64},
+  number    = {4},
+  pages     = {887--903},
+  year      = {2020},
+  publisher = {Wiley Online Library}
+}
+
+@article{hansen2018transparency,
+  title     = {Transparency and deliberation within the FOMC: a computational linguistics approach},
+  author    = {Hansen, Stephen and McMahon, Michael and Prat, Andrea},
+  journal   = {The Quarterly Journal of Economics},
+  volume    = {133},
+  number    = {2},
+  pages     = {801--870},
+  year      = {2018},
+  publisher = {Oxford University Press}
+}
+
+@article{lee2019deciphering,
+  title={Deciphering Monetary Policy Board Minutes with Text Mining: The Case of South Korea},
+  author={Lee, Young Joon and Kim, Soohyon and Park, Ki Young and others},
+  journal={Korean Economic Review},
+  volume={35},
+  pages={471--511},
   year={2019},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+  publisher={Korean Economic Association}
 }
