--- a/book/references.bib
+++ b/book/references.bib
@@ -279,7 +279,14 @@
   year    = {2015}
 }
 
-# Thesis
+# Advances in AI and NLP
+
+@article{mitchell2023detectgpt,
+  title   = {DetectGPT: Zero-Shot Machine-Generated Text Detection using Probability Curvature},
+  author  = {Mitchell, Eric and Lee, Yoonho and Khazatsky, Alexander and Manning, Christopher D and Finn, Chelsea},
+  journal = {arXiv preprint arXiv:2301.11305},
+  year    = {2023}
+}
 
 @article{sutskever2014sequence,
   title   = {Sequence to sequence learning with neural networks},
@@ -498,11 +505,13 @@
 }
 
 @article{lee2019deciphering,
-  title={Deciphering Monetary Policy Board Minutes with Text Mining: The Case of South Korea},
-  author={Lee, Young Joon and Kim, Soohyon and Park, Ki Young and others},
-  journal={Korean Economic Review},
-  volume={35},
-  pages={471--511},
-  year={2019},
-  publisher={Korean Economic Association}
+  title     = {Deciphering Monetary Policy Board Minutes with Text Mining: The Case of South Korea},
+  author    = {Lee, Young Joon and Kim, Soohyon and Park, Ki Young and others},
+  journal   = {Korean Economic Review},
+  volume    = {35},
+  pages     = {471--511},
+  year      = {2019},
+  publisher = {Korean Economic Association}
 }
+
+
