--- a/book/references.bib
+++ b/book/references.bib
@@ -285,7 +285,8 @@
   title   = {DetectGPT: Zero-Shot Machine-Generated Text Detection using Probability Curvature},
   author  = {Mitchell, Eric and Lee, Yoonho and Khazatsky, Alexander and Manning, Christopher D and Finn, Chelsea},
   journal = {arXiv preprint arXiv:2301.11305},
-  year    = {2023}
+  year    = {2023},
+  url     = {https://arxiv.org/pdf/2301.11305.pdf}
 }
 
 @article{sutskever2014sequence,
