--- a/book/references.bib
+++ b/book/references.bib
@@ -516,3 +516,10 @@
 }
 
 
+@article{wei2022emergent,
+  title   = {Emergent abilities of large language models},
+  author  = {Wei, Jason and Tay, Yi and Bommasani, Rishi and Raffel, Colin and Zoph, Barret and Borgeaud, Sebastian and Yogatama, Dani and Bosma, Maarten and Zhou, Denny and Metzler, Donald and others},
+  journal = {arXiv preprint arXiv:2206.07682},
+  year    = {2022},
+  url     = {https://openreview.net/pdf?id=yzkSU5zdwD}
+}
